# baresip

./: CMakeLists.txt  COMMEND.md  README.md  TODO_commend.md  azure-pipelines.yml
.github/workflows/: build.yml
cmake/: FindSYSTEMD.cmake  ctest.cmake  modules.cmake
docs/examples/: config
include/: baresip.h
modules/account/: account.c
modules/alsa_audiocore/: audiocore.c
modules/aui2s/: aui2s.c  aui2s.h  aui2s_play.c  aui2s_src.c  module.mk
modules/auogg/: auogg.c
modules/commod/: CMakeLists.txt  commod.c
modules/comvideo/: comvideo.c  comvideo.h  decode_h264.c  encode_h264.c
modules/cons/: cons.c
modules/contact/: contact.c
modules/ctrl_dbus/: CMakeLists.txt  config.h.in
modules/ctrl_tcp/: ctrl_tcp.c
modules/menu/: CMakeLists.txt  commend_menu.c  dynamic_menu.c  menu.c  menu.h  static_menu.c
modules/mixausrc/: mixausrc.c
modules/multicast/: multicast.c  receiver.c
modules/natpmp/: libnatpmp.c
modules/onvif/: device.c  filter.c  onvif_auth.c  scopes.c  soap.c  wsd.c
modules/portaudio/: portaudio.c
modules/pulse/: player.c  recorder.c
modules/v4l2/: v4l2.c
modules/zrtp/: zrtp.c
src/: account.c  audio.c  aureceiver.c  call.c  conf.c  config.c  contact.c  core.h  event.c  net.c  play.c  receiver.c  reg.c  rtprecv.c  stream.c  ua.c  uag.c  video.c
test/: CMakeLists.txt  call.c  contact.c  main.c  test.h  ua.c
test/mock/: dnssrv.c
